Name:                hulk
Version:             0.1.2
Synopsis:            IRC daemon.
Description:         An IRC daemon with mandatory authentication.
License:             BSD3
License-file:        LICENSE
Author:              Chris Done
Maintainer:          chrisdone@gmail.com
Copyright:           2010 Chris Done 
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.2
Extra-source-files:  README.md, hulk.conf.example, txt/MOTD, txt/PREFACE

-- TODO: replace version contraints

Executable hulk
  Main-is:           Main.hs
  Other-Modules:     Control.Concurrent.Delay, Control.Monad.IO,
                     Data.String,
                     Hulk.Auth, Hulk.Client, Hulk.Concurrent, Hulk.Config,
                     Hulk.Event, Hulk.Log, Hulk.Options, Hulk.Providers,
                     Hulk.Server, Hulk.Types
  Ghc-options:       -threaded
  Hs-Source-Dirs:    src
  Build-depends:     base
                    ,cmdargs
                    ,network
                    ,ConfigFile
                    ,unix
                    ,mtl 
                    ,containers
                    ,irc
                    ,split
                    ,utf8-string
                    ,Crypto
                    ,time
                    ,json
                    ,old-locale
                    ,old-time 
                    ,directory
                    ,filepath 
                    ,strict

Executable hulk-generate-pass
  Main-is:          GeneratePass.hs
  Other-Modules:     Control.Concurrent.Delay, Control.Monad.IO,
                     Data.String,
                     Hulk.Auth, Hulk.Client, Hulk.Concurrent, Hulk.Config,
                     Hulk.Event, Hulk.Log, Hulk.Options, Hulk.Providers,
                     Hulk.Server, Hulk.Types
  Hs-Source-Dirs:   src
  Build-depends:    base
                    ,cmdargs
                    ,network
                    ,ConfigFile
                    ,unix
                    ,mtl 
                    ,containers
                    ,irc 
                    ,split
                    ,utf8-string
                    ,Crypto
